[package]
edition = "2021"
name = "lotus-utils-audio"
version = "0.2.1"
authors = ["Youn Mélois <youn@melois.dev>"]
exclude = [".*"]
description = "Utilities for lotus-lib audio handling."
homepage = "https://github.com/sehnryr/lotus-lib"
keywords = [
    "warframe",
    "cache",
    "decompression",
    "utils",
    "audio",
]
categories = [
    "encoding",
    "filesystem",
    "parsing",
]
license = "MIT"
repository = "https://github.com/sehnryr/lotus-lib"

[dependencies.anyhow]
version = "1.0.79"

[dependencies.bytebuffer]
version = "2.2.0"

[dependencies.crc]
version = "3.0.1"

[dependencies.log]
version = "0.4.20"

[dependencies.lotus-lib]
version = "4.0.1"

[dependencies.rand]
version = "0.8.5"

[dependencies.zerocopy]
version = "0.7.32"

[dependencies.opus-decoder]
version = "0.1"

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"
